Bundled Themes: Twenty Seventeen Navbar z-index issue.
Fixes navbar z-index issue by upping the z-index value to 1000 from 7.

Props halgatewood, justnorris, poena, sinatrateam.
Fixes #39384.
Built from https://develop.svn.wordpress.org/trunk@48061


git-svn-id: http://core.svn.wordpress.org/trunk@47828 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -3529,7 +3529,7 @@ p > object:only-child {
 		right: 0;
 		top: 0;
 		width: 100%;
-		z-index: 7;
+		z-index: 1000;
 	}
 
 	.admin-bar .site-navigation-fixed.navigation-top {
